Bug 89872. Implement front-end cache in outliner to avoid doing repeated RDF lookups to determine container-hood and empty state. r=varga@utcru.sk, rs=kin.